--- a/cloudbuild.frontend.yaml
+++ b/cloudbuild.frontend.yaml
@@ -6,7 +6,7 @@ steps:
       - deploy
       - app.yaml
       - "--quiet"
-    dir: "frontend"
+    dir: "."
 
 options:
   logging: CLOUD_LOGGING_ONLY
