--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -4,35 +4,35 @@ handlers:
   # Menyajikan file HTML spesifik
   - url: /dashboard.html
     static_files: frontend/dashboard.html
-    upload: dashboard.html
+    upload: frontend/dashboard.html
 
   - url: /karyawan.html
     static_files: frontend/karyawan.html
-    upload: karyawan.html
+    upload: frontend/karyawan.html
 
   - url: /login.html
     static_files: frontend/login.html
-    upload: login.html
+    upload: frontend/login.html
 
   - url: /pemasukan.html
     static_files: frontend/pemasukan.html
-    upload: pemasukan.html
+    upload: frontend/pemasukan.html
 
   - url: /pengeluaran.html
     static_files: frontend/pengeluaran.html
-    upload: pengeluaran.html
+    upload: frontend/pengeluaran.html
 
   - url: /produk.html
     static_files: frontend/produk.html
-    upload: produk.html
+    upload: frontend/produk.html
 
   - url: /produkList.html
     static_files: frontend/produkList.html
-    upload: produkList.html
+    upload: frontend/produkList.html
 
   - url: /register.html
     static_files: frontend/register.html
-    upload: register.html
+    upload: frontend/register.html
 
   # Menyajikan file statis lainnya di dalam folder 'style'
   - url: /style/(.*)
