--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -2,37 +2,37 @@ runtime: python39
 
 handlers:
   # Menyajikan file HTML spesifik
-  - url: /dashboard.html
-    static_files: frontend/dashboard.html
-    upload: frontend/dashboard.html
+  - url: /
+    static_files: dashboard.html
+    upload: dashboard.html
 
-  - url: /karyawan.html
-    static_files: frontend/karyawan.html
-    upload: frontend/karyawan.html
+  - url: /
+    static_files: karyawan.html
+    upload: karyawan.html
 
-  - url: /login.html
-    static_files: frontend/login.html
-    upload: frontend/login.html
+  - url: /
+    static_files: login.html
+    upload: login.html
 
-  - url: /pemasukan.html
-    static_files: frontend/pemasukan.html
-    upload: frontend/pemasukan.html
+  - url: /
+    static_files: pemasukan.html
+    upload: pemasukan.html
 
-  - url: /pengeluaran.html
-    static_files: frontend/pengeluaran.html
-    upload: frontend/pengeluaran.html
+  - url: /
+    static_files: pengeluaran.html
+    upload: pengeluaran.html
 
-  - url: /produk.html
-    static_files: frontend/produk.html
-    upload: frontend/produk.html
+  - url: /
+    static_files: produk.html
+    upload: produk.html
 
-  - url: /produkList.html
-    static_files: frontend/produkList.html
-    upload: frontend/produkList.html
+  - url: /
+    static_files: produkList.html
+    upload: produkList.html
 
-  - url: /register.html
-    static_files: frontend/register.html
-    upload: frontend/register.html
+  - url: /
+    static_files: register.html
+    upload: register.html
 
   # Menyajikan file statis lainnya di dalam folder 'style'
   - url: /style/(.*)
